--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -1392,8 +1392,8 @@
     "translation": "RESERVED_ROUTE_PORTS"
   },
   {
-    "id": "ROLE must be \"OrgManager\", \"OrgDeveloper\" and \"OrgAuditor\"",
-    "translation": ""
+    "id": "ROLE must be \"OrgManager\", \"BillingManager\" and \"OrgAuditor\"",
+    "translation": "ROLE must be \"OrgManager\", \"BillingManager\" and \"OrgAuditor\""
   },
   {
     "id": "ROLE must be \"SpaceManager\", \"SpaceDeveloper\" and \"SpaceAuditor\"",
@@ -1861,6 +1861,10 @@
   },
   {
     "id": "[hidden]",
+    "translation": ""
+  },
+  {
+    "id": "billingmanager",
     "translation": ""
   },
   {
