fixed noaa client error handling during polling
[#126256921]

Signed-off-by: Nick Wei <nwei@pivotal.io>

--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -1204,6 +1204,10 @@
     "translation": "Error removing plugin binary: "
   },
   {
+    "id": "Error restarting application: {{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
+    "translation": ""
+  },
+  {
     "id": "Error running task: {{.CloudControllerMessage}}",
     "translation": ""
   },
@@ -2001,10 +2005,6 @@
   },
   {
     "id": "{{.MemorySize}} x {{.NumInstances}} instances",
-    "translation": ""
-  },
-  {
-    "id": "{{.Message}}\n\nTIP: Use '{{.BuildpackCommand}}' to see a list of supported buildpacks.",
     "translation": ""
   },
   {
