--- a/cf/i18n/resources/pt-br.untranslated.json
+++ b/cf/i18n/resources/pt-br.untranslated.json
@@ -1280,6 +1280,10 @@
     "translation": ""
   },
   {
+    "id": "Incorrect usage: --sso-passcode flag cannot be used with --sso",
+    "translation": ""
+  },
+  {
     "id": "Incorrect usage: Value for {{.ArgumentName}} must be {{.ExpectedType}}",
     "translation": ""
   },
@@ -1362,6 +1366,10 @@
   {
     "id": "OK",
     "translation": "OK"
+  },
+  {
+    "id": "One-time passcode",
+    "translation": ""
   },
   {
     "id": "One-time password",
@@ -1457,6 +1465,10 @@
   },
   {
     "id": "Path used in combination with HOSTNAME and DOMAIN to specify the route to unbind",
+    "translation": ""
+  },
+  {
+    "id": "Prompt for a one-time passcode to login",
     "translation": ""
   },
   {
@@ -2070,6 +2082,10 @@
   {
     "id": "service_guid IN ",
     "translation": "service_guid IN "
+  },
+  {
+    "id": "sso-passcode",
+    "translation": ""
   },
   {
     "id": "start time",
