--- a/cf/i18n/resources/zh-hans.untranslated.json
+++ b/cf/i18n/resources/zh-hans.untranslated.json
@@ -1244,6 +1244,10 @@
     "translation": ""
   },
   {
+    "id": "Incorrect usage: --sso-passcode flag cannot be used with --sso",
+    "translation": ""
+  },
+  {
     "id": "Incorrect usage: Value for {{.ArgumentName}} must be {{.ExpectedType}}",
     "translation": ""
   },
@@ -1326,6 +1330,10 @@
   {
     "id": "Not supported on windows",
     "translation": "Not supported on windows"
+  },
+  {
+    "id": "One-time passcode",
+    "translation": ""
   },
   {
     "id": "One-time password",
@@ -1417,6 +1425,10 @@
   },
   {
     "id": "Path used in combination with HOSTNAME and DOMAIN to specify the route to unbind",
+    "translation": ""
+  },
+  {
+    "id": "Prompt for a one-time passcode to login",
     "translation": ""
   },
   {
@@ -1982,6 +1994,10 @@
   {
     "id": "service_guid IN ",
     "translation": "service_guid IN "
+  },
+  {
+    "id": "sso-passcode",
+    "translation": ""
   },
   {
     "id": "start time",
