--- a/cf/i18n/resources/de-de.untranslated.json
+++ b/cf/i18n/resources/de-de.untranslated.json
@@ -1240,6 +1240,10 @@
     "translation": ""
   },
   {
+    "id": "Incorrect usage: --sso-passcode flag cannot be used with --sso",
+    "translation": ""
+  },
+  {
     "id": "Incorrect usage: Value for {{.ArgumentName}} must be {{.ExpectedType}}",
     "translation": ""
   },
@@ -1322,6 +1326,10 @@
   {
     "id": "OK",
     "translation": "OK"
+  },
+  {
+    "id": "One-time passcode",
+    "translation": ""
   },
   {
     "id": "Option '--app-ports'",
@@ -1410,6 +1418,10 @@
   {
     "id": "Plan: {{.ServicePlanName}}",
     "translation": "Plan: {{.ServicePlanName}}"
+  },
+  {
+    "id": "Prompt for a one-time passcode to login",
+    "translation": ""
   },
   {
     "id": "Provider",
@@ -1986,6 +1998,10 @@
   {
     "id": "service_guid IN ",
     "translation": "service_guid IN "
+  },
+  {
+    "id": "sso-passcode",
+    "translation": ""
   },
   {
     "id": "start time",
