--- a/cf/i18n/resources/ko-kr.untranslated.json
+++ b/cf/i18n/resources/ko-kr.untranslated.json
@@ -1224,6 +1224,10 @@
     "translation": ""
   },
   {
+    "id": "Incorrect usage: --sso-passcode flag cannot be used with --sso",
+    "translation": ""
+  },
+  {
     "id": "Incorrect usage: Value for {{.ArgumentName}} must be {{.ExpectedType}}",
     "translation": ""
   },
@@ -1302,6 +1306,10 @@
   {
     "id": "Not supported on windows",
     "translation": "Not supported on windows"
+  },
+  {
+    "id": "One-time passcode",
+    "translation": ""
   },
   {
     "id": "One-time password",
@@ -1385,6 +1393,10 @@
   },
   {
     "id": "Path used in combination with HOSTNAME and DOMAIN to specify the route to unbind",
+    "translation": ""
+  },
+  {
+    "id": "Prompt for a one-time passcode to login",
     "translation": ""
   },
   {
@@ -1918,6 +1930,10 @@
   {
     "id": "service_guid IN ",
     "translation": "service_guid IN "
+  },
+  {
+    "id": "sso-passcode",
+    "translation": ""
   },
   {
     "id": "start time",
